--- a/Part One/1-4-lists.ipynb
+++ b/Part One/1-4-lists.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-02-25T04:17:29.969490Z",
@@ -136,8 +136,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Slicing method: Elapsed time: 0.01 seconds\n",
-      "Built-in class method: Elapsed time: 0.00 seconds\n"
+      "Slicing method: Elapsed time: 0.0118 seconds\n",
+      "Built-in class method: Elapsed time: 0.0015 seconds\n"
      ]
     }
    ],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-06-17T21:39:31.975108Z",
@@ -217,7 +217,19 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'n', 'o', 't', 'e', 'b', 'o', 'o', 'k']\n",
+      "['n', 'o', 't', 'e', 'b', 'o', 'o', 'k', ['n', 'o', 't', 'e', 'b', 'o', 'o', 'k']]\n",
+      "['n', 'o', 't', 'e', 'b', 'o', 'o', 'k', 'n', 'o', 't', 'e', 'b', 'o', 'o', 'k']\n",
+      "['b', 'b', 'e', 'e', 'k', 'k', 'n', 'n', 'o', 'o', 'o', 'o', 'o', 'o', 't', 't']\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "source = list('notebook')\n",
     "# Add an element at position-0\n",
@@ -420,26 +432,44 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "# Exercises"
+   "source": [
+    "# Exercises"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 1\n",
     "Given a list variable: a = [2, 9, 1, \"2\", \"s\", 6], write a single line of code to sort the variable using the built-in sort() function. Explain the result."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'<' not supported between instances of 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m a = [\u001b[32m2\u001b[39m, \u001b[32m9\u001b[39m, \u001b[32m1\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m2\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33ms\u001b[39m\u001b[33m\"\u001b[39m, \u001b[32m6\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43ma\u001b[49m\u001b[43m.\u001b[49m\u001b[43msort\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# This will raise a TypeError because Python cannot compare integers and strings directly when sorting.\u001b[39;00m\n",
+      "\u001b[31mTypeError\u001b[39m: '<' not supported between instances of 'str' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "a = [2, 9, 1, \"2\", \"s\", 6]\n",
+    "a.sort()\n",
+    "# This will raise a TypeError because Python cannot compare integers and strings directly when sorting."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 2\n",
     "Write a code to type cast a string \"immutable\" into a list type variable, called input_list. Then remove the first two elements in input_list using the built-in method pop(). Finally, type cast the resulting input_list back to a string and print out.\n",
@@ -448,78 +478,151 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mutable\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list = list(\"immutable\")\n",
+    "input_list.pop(0)\n",
+    "input_list.pop(0)\n",
+    "result = \"\".join(input_list)\n",
+    "print(result)\n",
+    "\n"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "immutable\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list = list(\"mutable\")\n",
+    "input_list.insert(0, \"i\")\n",
+    "input_list.insert(1, \"m\")\n",
+    "result = \"\".join(input_list)\n",
+    "print(result)"
+   ]
+  },
+  {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 4\n",
     "*sorted()* is a useful built-in function that can sort either a list or a string as input. Write a code to demonstrate of the output result of the function when the input argument is a list or a string."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'e', 'i', 'l', 'm', 'm', 't', 'u']\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = \"immutable\"\n",
+    "l = list(string)\n",
+    "l.sort()\n",
+    "print(l)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 5\n",
     "Debug"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' ', ' ', 'a', 'e', 'g', 'i', 'n', 'r', 's', 's', 't', 't', 't']\n"
+     ]
+    }
+   ],
    "source": [
     "a = \"a test string\"\n",
     "\n",
     "a_list = list(a)\n",
-    "print(a_list.sort())\n",
+    "a_list.sort()\n",
+    "print(a_list)\n",
     "\n",
     "# Please use the follow sorted() approach to again sort a string\n",
     "# a_result = sorted(a)"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 6\n",
     "Debug"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abcde', 'f', 'g', 'h', 'i', 'j']\n",
+      "abcdefghij\n"
+     ]
+    }
+   ],
    "source": [
     "# Please concatenate two strings from the elements of two lists\n",
     "List = ['abcde']\n",
     "List = List + list('fghij')\n",
-    "print(List)"
+    "print(List)\n",
+    "str1 = List[0]  # 'abcde'\n",
+    "str2 = \"\".join(List[1:])  # 'fghij'\n",
+    "result = str1 + str2\n",
+    "print(result)\n"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Challenges"
+   "metadata": {},
+   "source": [
+    "# Challenges"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Challenge 1\n",
     "Create a list of lists with the variable name L. The first element of L is itself a list [1, 2], and the second element of L is another list ['a', 'b']. Then, swap the elements between L[0][1] and L[1][0]. Please note that a swap should be coded as a generic operation so as to not hard set the given values of L.\n",
@@ -530,11 +633,31 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4340092520\n",
+      "[['1', 'a'], ['2', 'b']]\n",
+      "4339826328\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = [['1', '2'],['a', 'b']]\n",
+    "print(id(L[0][1]))\n",
+    "#print(id(L))\n",
+    "temp = L[0][1]\n",
+    "L[0][1] = L[1][0]\n",
+    "L[1][0] = temp\n",
+    "#print(id(L)) #ID is unchanged because we are not changing the list itself, just its contents\n",
+    "print(L)\n",
+    "print(id(L[0][1])) #ID changed because we changed the content"
+   ]
   }
  ],
  "metadata": {
@@ -548,7 +671,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "roar",
    "language": "python",
    "name": "python3"
   },
@@ -562,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
