--- a/Part One/1-5-conditions-and-loops.ipynb
+++ b/Part One/1-5-conditions-and-loops.ipynb
@@ -274,7 +274,26 @@
     "    print (n, 'is a prime number')\n",
     "else:\n",
     "    x = 2\n",
-    "    while x<=math.sqrt(n) + 1:\n",
+    "    while x<=math.sqrt(n) + 1: # check divisors from 2 to sqrt(n)\n",
+    "         # if n is divisible by x, then it is not a prime number\n",
+    "         # if n is not divisible by x, then it is a prime number\n",
+    "         # Note: we can check divisors only up to sqrt(n) because if n = x * y, then either x or y must be less than or equal to sqrt(n)\n",
+    "         # Example: if n = 36, then x can be 2, 3, 4, 6 (all less than or equal to sqrt(36) = 6)\n",
+    "         # and y can be 18, 12, 9, 6 (all greater than or equal to sqrt(36) = 6)\n",
+    "         # So, we only need to check divisors from 2 to sqrt(n)\n",
+    "         # If we find any divisor, then n is not a prime number\n",
+    "         # If we do not find any divisor, then n is a prime number\n",
+    "         # Note: we can also check divisors from 2 to n-1, but that is less efficient\n",
+    "         # Example: if n = 36, then we would check divisors 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13\n",
+    "         # 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32\n",
+    "         # 33, 34, 35 (total 34 checks) which is less efficient than checking only up to sqrt(n) which is 6 checks\n",
+    "         # So, we will check divisors from 2 to sqrt(n) + 1\n",
+    "         # We add 1 to sqrt(n) to include the case where n is a perfect square, e.g., n = 36\n",
+    "         # In that case, we need to check 6 as a divisor, which is equal to sqrt(36)\n",
+    "         # So, we check from 2 to sqrt(n) + 1\n",
+    "         # Example: if n = 36, then we check divisors 2, 3, 4, 5, 6\n",
+    "         # If we find any divisor, then n is not a prime number\n",
+    "         # If we do not find any divisor, then n is a prime number\n",
     "         if n % x == 0:    # n = x * y for some y\n",
     "            print(n, 'is not a prime number')\n",
     "            break\n",
@@ -464,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-06-24T17:59:00.373750Z",
@@ -480,9 +499,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WHILE LOOP REVERSE: Total elapsed time: 63.72 seconds\n",
-      "REVERSE() METHOD: Total elapsed time: 1.01 seconds\n",
-      "REVERSE() METHOD: Total elapsed time: 0.19 seconds\n"
+      "WHILE LOOP REVERSE: Total elapsed time: 13.57 seconds\n",
+      "REVERSE() METHOD: Total elapsed time: 0.40 seconds\n",
+      "REVERSE() METHOD: Total elapsed time: 0.09 seconds\n"
      ]
     }
    ],
@@ -541,11 +560,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "# Exercises"
+   "source": [
+    "# Exercises"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 1\n",
     "According to Wikipedia, the following pseudo-code is an algorithm to determine a *year* variable as a positive integer represents a leap year. Please write a program, which will receive an integer input from the user as the value of the *year* variable, and then determine if it is a leap year.\n",
@@ -559,85 +580,193 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016 is a leap year\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputYear = int(input(\"Enter a year: \"))\n",
+    "if inputYear % 4 == 0:\n",
+    "    if inputYear % 100 == 0:\n",
+    "        if inputYear % 400 == 0:\n",
+    "            print(inputYear, \"is a leap year\")\n",
+    "        else:\n",
+    "            print(inputYear, \"is not a leap year\")\n",
+    "    else:\n",
+    "        print(inputYear, \"is a leap year\")\n",
+    "else:\n",
+    "    print(inputYear, \"is not a leap year\")\n"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 2\n",
     "Please use the combination of *while* loop and time.time() function, to create a loop that will run for exactly 5 seconds. Hint: Inside the loop, the code block can use *pass* statement."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "source": [
+    "import time\n",
+    "\n",
+    "start = time.time()\n",
+    "while start + 5 > time.time():  # Run for 10 seconds\n",
+    "    pass  # Do nothing, just wait"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 3\n",
     "Please modify Rock-Paper-Scissors Example Code in the lecture to add a score variable, namely, when the user wins, the score will increase by one point; when the user loses, the score will decrease by one point. Create a loop structure starting from the initial value score = 0, and continue running the Rock-Paper-Scissors game until the score reaches three (3)."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please input [R] Rock, [P] Paper, or [S] Scissors: \n",
+      "Computer input is  S\n",
+      "You Win! \n",
+      "Score:  1\n",
+      "Please input [R] Rock, [P] Paper, or [S] Scissors: \n",
+      "Computer input is  P\n",
+      "You Lose!\n",
+      "Score:  1\n",
+      "Please input [R] Rock, [P] Paper, or [S] Scissors: \n",
+      "Computer input is  P\n",
+      "You Lose!\n",
+      "Score:  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "scoreCounter = 0\n",
+    "winCounter = 0\n",
+    "\n",
+    "while scoreCounter < 3:  # Play until the user wins 5 times\n",
+    "    # Ask user to input R or P or S\n",
+    "    print('Please input [R] Rock, [P] Paper, or [S] Scissors: ')\n",
+    "    user_input = input()\n",
+    "    user_input = user_input.upper()     # convert lower case to upper case\n",
+    "    scoreCounter += 1  # Increment score counter for each round played\n",
+    "\n",
+    "    if user_input !='R' and user_input !='P' and user_input !='S': # Doing sanity test\n",
+    "        print(\"Input not supported\")\n",
+    "    else:\n",
+    "        computer_input = random.choice(['R', 'P', 'S'])\n",
+    "        print('Computer input is ', computer_input)\n",
+    "        if computer_input == user_input:\n",
+    "            print(\"Draw!\")\n",
+    "            print(\"Score: \", winCounter)\n",
+    "        elif (computer_input=='R' and user_input == 'S') or \\\n",
+    "            (computer_input=='S' and user_input == 'P') or \\\n",
+    "            (computer_input=='P' and user_input == 'R'):\n",
+    "            print('You Lose!')\n",
+    "            print(\"Score: \" ,winCounter)\n",
+    "        else:\n",
+    "            winCounter += 1\n",
+    "            print('You Win! ')\n",
+    "            print(\"Score: \" , winCounter)\n",
+    "\n"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 4\n",
     "Please reverse a string variable using the *for* loop."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "!dlroW olleH\n"
+     ]
+    }
+   ],
+   "source": [
+    "phrase = \"Hello World!\"\n",
+    "reversed_phrase = \"\"\n",
+    "for char in phrase:\n",
+    "    reversed_phrase = char + reversed_phrase\n",
+    "print(reversed_phrase)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 5\n",
     "Debug"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in range(10)\n",
+    "for i in range(10):\n",
     "    print(i)\n",
-    "else\n",
+    "else:\n",
     "    pass"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Challenges"
+   "metadata": {},
+   "source": [
+    "# Challenges"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Challenge 1\n",
     "Using a list and a *for* loop to calculate and save the Fibonacci number for the first 10 nonnegative integers. The Fibonacci number is defined as:\n",
@@ -647,15 +776,29 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fibonacci = [0, 1]\n",
+    "for i in range(2, 10):\n",
+    "    next_value = fibonacci[i-1] + fibonacci[i-2]\n",
+    "    fibonacci.append(next_value)\n",
+    "print(fibonacci)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Challenge 2\n",
     "Use for loop to print the following pattern for n layers. For example, when n = 4, the pattern is:\n",
@@ -672,16 +815,41 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1 1\n",
+      "1 2 1\n",
+      "1 3 3 1\n",
+      "1 4 6 4 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Enter the number of layers for Pascal's Triangle: \"))\n",
+    "triangle = []\n",
+    "\n",
+    "for row in range(n+1):\n",
+    "    current_row = [1]\n",
+    "    if triangle:\n",
+    "        last_row = triangle[-1]\n",
+    "        for j in range(1, row):\n",
+    "            current_row.append(last_row[j-1] + last_row[j])\n",
+    "        current_row.append(1)\n",
+    "    triangle.append(current_row)\n",
+    "    print(' '.join(str(num) for num in current_row))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "roar",
    "language": "python",
    "name": "python3"
   },
@@ -695,7 +863,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
