--- a/Part One/1-7-tuples-and-dictionaries.ipynb
+++ b/Part One/1-7-tuples-and-dictionaries.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-06-27T10:15:42.352307Z",
@@ -198,7 +198,17 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "allenyang berkeley.edu\n",
+      "Roses are red  Violets are blue, Sugar is sweet\n",
+      " Sugar is sweet\n"
+     ]
+    }
+   ],
    "source": [
     "email = 'allenyang@berkeley.edu'\n",
     "name, address = email.split('@')       # return of the string.split() method is a tuple\n",
@@ -344,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-06-25T23:47:20.030401Z",
@@ -355,7 +365,16 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w e c a n k o l y t h i g d s r f u m \n",
+      "5 7 1 5 8 2 6 1 1 7 7 4 3 3 3 1 1 1 2 "
+     ]
+    }
+   ],
    "source": [
     "# Build a character histogram\n",
     "\n",
@@ -469,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-06-29T17:51:04.351670Z",
@@ -487,9 +506,9 @@
      "text": [
       "Reading text file from url ...  done\n",
       "Generating 1M random tickers ...  done\n",
-      "Searching a size-10 dictionary 1M times takes: 0.18244504928588867s\n",
-      "Searching a size-1000 dictionary 1M times takes: 0.14960026741027832s\n",
-      "Searching a size-5203 dictionary 1M times takes: 0.1539783477783203s\n"
+      "Searching a size-10 dictionary 1M times takes: 0.0824892520904541s\n",
+      "Searching a size-1000 dictionary 1M times takes: 0.05723118782043457s\n",
+      "Searching a size-4966 dictionary 1M times takes: 0.060476064682006836s\n"
      ]
     }
    ],
@@ -618,7 +637,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "# Exercises"
+   "source": [
+    "# Exercises"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -639,44 +660,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
-   "source": "",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "Input length:  8\n",
+      "args = (3, 4, 5, 2, 1, 8, 9, 10)\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(min(2, 3))\n",
+    "print(min(3, 4))\n",
+    "\n",
+    "def my_min(*args):\n",
+    "    print('Input length: ', len(args))\n",
+    "    print('args = ' + str(args))\n",
+    "    return(min(args))\n",
+    "\n",
+    "print(my_min(3,4,5,2,1,8,9,10))"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 2\n",
     "Use type() function to verify the variable type of two assignment values: ('a'), ('a', ). Please discuss the difference."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type of ('a'): <class 'str'>\n",
+      "Type of ('a', ): <class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = ('a')\n",
+    "y = ('a', )\n",
+    "\n",
+    "print(\"Type of ('a'):\", type(x))\n",
+    "print(\"Type of ('a', ):\", type(y))\n",
+    "\n",
+    "# ('a') is just a string in parentheses, so its type is str.\n",
+    "# ('a', ) with a comma creates a tuple with one element, so its type is tuple."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 3\n",
     "Use id() function to code an example, which demonstrates that dictionary is a mutable variable type."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4700906816\n",
+      "{1: 'one', 2: 'two', 3: 'three'}\n",
+      "4700906816\n",
+      "four\n"
+     ]
+    }
+   ],
+   "source": [
+    "D = {1: \"one\", 2: \"two\", 3: \"three\"}\n",
+    "print(id(D))\n",
+    "print(D)\n",
+    "D[4] = \"four\"\n",
+    "print(id(D))\n",
+    "print(D[4])"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 4\n",
     "Create a simple English-to-Italian dictionary, with the following five (key, value) pairs:\n",
@@ -689,54 +768,111 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "english_to_italian = {\n",
+    "    \"one\": \"uno\",\n",
+    "    \"two\": \"due\",\n",
+    "    \"three\": \"tre\",\n",
+    "    \"four\": \"quattro\",\n",
+    "    \"five\": \"cinque\"\n",
+    "}\n",
+    "italian_to_english = {}\n",
+    "\n",
+    "for eng,ita in english_to_italian.items():\n",
+    "    italian_to_english[ita] = eng\n",
+    "\n",
+    "\n",
+    "def translate(word):\n",
+    "    if word in english_to_italian:\n",
+    "        print(f\"{word} (English) -> {english_to_italian[word]} (Italian)\")\n",
+    "    elif word in italian_to_english:\n",
+    "        print(f\"{word} (Italian) -> {italian_to_english[word]} (English)\")\n",
+    "    else:\n",
+    "        print(\"Translation is not available.\")\n",
+    "\n",
+    "# Example usage:\n",
+    "translate(\"one\")\n",
+    "translate(\"due\")\n",
+    "translate(\"sei\")"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 5\n",
     "Although a tuple is an immutable type, sometimes Python may successfully modify values inside a tuple, such as the code below. Explain why?"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4561561984\n",
+      "(0.11, [3, 35], 20, [40, 45], 50)\n",
+      "4561561984\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Although a tuple itself is immutable (its structure cannot be changed),\n",
+    "# if it contains mutable objects (like lists), those objects can be modified.\n",
+    "# The tuple only stores references to the objects, not the objects themselves.\n",
+    "\n",
+    "T = (0.11, [30, 35], 20, [40,45], 50)\n",
+    "print(id(T))\n",
+    "T[1][0] = 3\n",
+    "print(T)\n",
+    "print(id(T))\n",
+    "# Output: (0.11, [3, 35], 20, [40, 45], 50)\n"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 6\n",
     "Debug:"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.11, [3, 35], 20, [40, 45], 50)\n"
+     ]
+    }
+   ],
    "source": [
     "T = (0.11, [30, 35], 20, [40,45], 50)\n",
-    "T[1][0] = 3\n",
+    "T[1][0]= 3\n",
     "print(T)"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Challenges"
+   "metadata": {},
+   "source": [
+    "# Challenges"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Challenge 1\n",
     "Take the same text input:\n",
@@ -746,16 +882,19 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = 'We can know only that we know nothing. And that is the highest degree of human wisdom.' # From War and Peace\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "roar",
    "language": "python",
    "name": "python3"
   },
@@ -769,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
