--- a/Part One/1-8-sets-and-hashing.ipynb
+++ b/Part One/1-8-sets-and-hashing.ipynb
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-06-28T06:09:13.297562Z",
@@ -332,7 +332,16 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 65 98 79\n",
+      "85 88 67 42\n"
+     ]
+    }
+   ],
    "source": [
     "quotes = ['We can know only that we know nothing. And that is the highest degree of human wisdom.',\\\n",
     "        'Nothing is so necessary for a young man as the company of intelligent women.',\\\n",
@@ -374,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-06-28T06:15:17.130626Z",
@@ -385,7 +394,18 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sha3_384', 'shake_128', 'blake2s', 'md5', 'sha3_512', 'sha1', 'sha3_224', 'sha224', 'sha256', 'sha3_256', 'sha512', 'blake2b', 'shake_256', 'sha384'}\n",
+      "e0da48d356c6e6a3fd817b6f1d0a103e\n",
+      "<class 'bytes'> <class 'str'>\n",
+      "e0da48d356c6e6a3fd817b6f1d0a103e\n"
+     ]
+    }
+   ],
    "source": [
     "import hashlib\n",
     "print(hashlib.algorithms_guaranteed)\n",
@@ -415,7 +435,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "# Exercises"
+   "source": [
+    "# Exercises"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,69 +458,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
-   "source": "",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'two', 'one', 'three'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {\"one\": 1, \"two\": 2, \"three\": 3}\n",
+    "\n",
+    "def extract_keys(d):\n",
+    "    keys = set()\n",
+    "    for key in d:\n",
+    "        keys.add(key)\n",
+    "    return keys\n",
+    "print(extract_keys(d))"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 2\n",
     "Implement your own version of the set function *issuperset(set_1, set_2)*, which takes in two set input arguments and output True if the first argument is a superset of the second argument."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def issupperset(set_1, set_2):\n",
+    "    return set_1 >= set_2\n",
+    "print(issupperset({1, 2, 3, 4}, {1, 2,4}))"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 3\n",
     "Implement your own version of the set function *XOR(set_1, set_2)*, which takes in two set input arguments and output their symmetric difference."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 4\n",
     "Let a quote string equal to 'We can know only that we know nothing. And that is the highest degree of human wisdom.' Then use the above division_hashing() function to find a substring from the quote string that has the same hash value. Note, if hash_prime_number = 101 as set in the code above, the hash value of the full quote string should be 20."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found substring: 'We can know only that we know nothing. And that is the h' with hash value 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "quote = 'We can know only that we know nothing. And that is the highest degree of human wisdom.'\n",
+    "\n",
+    "target_hash = division_hashing(quote)\n",
+    "\n",
+    "# Try all substrings to find one with the same hash value\n",
+    "found = False\n",
+    "for i in range(len(quote)):\n",
+    "    for j in range(i+1, len(quote)+1):\n",
+    "        substring = quote[i:j]\n",
+    "        if division_hashing(substring) == target_hash and substring != quote:\n",
+    "            print(f\"Found substring: '{substring}' with hash value {target_hash}\")\n",
+    "            found = True\n",
+    "            break\n",
+    "    if found:\n",
+    "        break\n",
+    "if not found:\n",
+    "    print(\"No substring found with the same hash value.\")"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 5\n",
     "Debug:"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1666180249186764801\n"
+     ]
+    }
+   ],
    "source": [
     "animals = ['cat', 'dog', 'horse', 'cow']\n",
     "print(animals[0].__hash__())\n",
@@ -506,13 +591,15 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Challenges"
+   "metadata": {},
+   "source": [
+    "# Challenges"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Challenge 1\n",
     "In calculating the hash value of an integer shown below, we can notice that in many Python implementations, its hash value is exactly equal to the integer value. This is purposely designed to prevent assigning duplicate copies of small integer values in memory. In other words, for small integer values, each integer value is reserved to have only one copy and one memory address.\n",
@@ -523,15 +610,15 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Challenge 2\n",
     "Assume a transaction string is \"Satoshi sends 50 BTC to Hal\". Then use SHA256 hash algorithm to hash the string plus 4 consecutive random bytes called nounce, namely, string + nounce_1 + nounce_2 + nounce_3 + nounce_4.\n",
@@ -542,16 +629,16 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "roar",
    "language": "python",
    "name": "python3"
   },
@@ -565,7 +652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
