--- a/Part One/1-9-classes-and-object-oriented-programmming-i.ipynb
+++ b/Part One/1-9-classes-and-object-oriented-programmming-i.ipynb
@@ -66,10 +66,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class Person:\n",
     "    ''' An example class to show Python Class definitions'''\n",
@@ -117,10 +117,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class Person:\n",
     "    ''' An example class to show Python Class definitions'''\n",
@@ -181,10 +181,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from datetime import date\n",
     "\n",
@@ -217,7 +217,7 @@
     "    @classmethod\n",
     "    def fromBirth(cls, first_name, last_name, birth_year):\n",
     "        if type(birth_year)!=int:\n",
-    "            raise TypeERror('birth_year must be an int')\n",
+    "            raise TypeError('birth_year must be an int')\n",
     "\n",
     "        if birth_year > date.today().year:\n",
     "            raise ValueError('Given birth year is greater than current year.')\n",
@@ -266,10 +266,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from datetime import date\n",
     "\n",
@@ -338,11 +338,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "# Exercises"
+   "source": [
+    "# Exercises"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 1\n",
     "In Python design a class named Vehicle. A Vehicle class should contain the following attributes:\n",
@@ -359,15 +361,51 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle:\n",
+    "    def __init__(self, brand, model, type={\"sedans\", \"convertable\", \"SUV\",\"truck\"}):\n",
+    "        self.brand = brand\n",
+    "        self.model = model\n",
+    "        self.type = type\n",
+    "    \n",
+    "    def set_fuel_level(self, fuel_level):\n",
+    "        self.fuel_level = fuel_level\n",
+    "\n",
+    "    def check_fuel_level(self):\n",
+    "        return self.fuel_level\n",
+    "    \n",
+    "def set_fuel_level(vehicle, fuel_level):\n",
+    "    vehicle.fuel_level = fuel_level\n",
+    "\n",
+    "def check_fuel_level(vehicle):\n",
+    "    return vehicle.fuel_level\n",
+    "\n",
+    "crv = Vehicle(\"Honda\", \"CR-V\", {\"SUV\"})\n",
+    "crv.set_fuel_level(50)\n",
+    "print(crv.check_fuel_level())\n",
+    "\n",
+    "# Advantages of encapsulation:\n",
+    "# - Encapsulation bundles data and methods together, improving code organization.\n",
+    "# - It restricts direct access to attributes, allowing validation and error checking.\n",
+    "# - Encapsulation makes code easier to maintain and reuse.\n",
+    "# - It helps prevent unintended interference and misuse of internal object state."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 3\n",
     "Design a League class, representing multiple basketball teams competing in a league. The class attributes should at least include the total team number and each team name. Also design relevant methods to set these attributes.\n",
@@ -377,31 +415,115 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "class League:\n",
+    "    teams = 0\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        League.teams +=1\n",
+    "\n",
+    "    def add_teams(amt):\n",
+    "        League.teams+=amt\n",
+    "\n",
+    "    def set_teams(teamNums):\n",
+    "        League.teams = teamNums\n",
+    "\n",
+    "    def get_teams():\n",
+    "        return League.teams\n",
+    "    \n",
+    "    def set_name(self, name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def get_name(self):\n",
+    "        return self.name\n",
+    "    \n",
+    "\n",
+    "testTeam = League(\"Test\")\n",
+    "print(testTeam.get_name())\n",
+    "League.add_teams(5)\n",
+    "print(League.get_teams())"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "# Challenges"
+   "source": [
+    "# Challenges"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Challenge 1\n",
     "Design a class named BankAccount. Attributes in BankAccount should include customer_ID and cash_position. Please define and implement relevant methods to update the content of the attributes, such as set and get customer_ID, deposit and withdraw cash_position value. Please also include necessary sanity checking to make sure the attribute values are not out of bound in real world use cases. For example, cash_position should never be negative."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C123 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BankAccount:\n",
+    "    def __init__(self, customer_ID, cash_position=0.0):\n",
+    "        if not isinstance(customer_ID, str):\n",
+    "            raise TypeError(\"customer_ID must be a string.\")\n",
+    "        if cash_position < 0:\n",
+    "            raise ValueError(\"Initial cash_position cannot be negative.\")\n",
+    "        self.customer_ID = customer_ID\n",
+    "        self.cash_position = cash_position\n",
+    "\n",
+    "    def set_customer_ID(self, customer_ID):\n",
+    "        if not isinstance(customer_ID, str):\n",
+    "            raise TypeError(\"customer_ID must be a string.\")\n",
+    "        self.customer_ID = customer_ID\n",
+    "\n",
+    "    def get_customer_ID(self):\n",
+    "        return self.customer_ID\n",
+    "\n",
+    "    def deposit(self, amount):\n",
+    "        if amount < 0:\n",
+    "            raise ValueError(\"Deposit amount must be non-negative.\")\n",
+    "        self.cash_position += amount\n",
+    "\n",
+    "    def withdraw(self, amount):\n",
+    "        if amount < 0:\n",
+    "            raise ValueError(\"Withdraw amount must be non-negative.\")\n",
+    "        if amount > self.cash_position:\n",
+    "            raise ValueError(\"Insufficient funds for withdrawal.\")\n",
+    "        self.cash_position -= amount\n",
+    "\n",
+    "    def get_cash_position(self):\n",
+    "        return self.cash_position\n",
+    "\n",
+    "# Example usage:\n",
+    "acct = BankAccount(\"C123\", 100)\n",
+    "acct.deposit(50)\n",
+    "acct.withdraw(30)\n",
+    "print(acct.get_customer_ID(), acct.get_cash_position())"
+   ]
   }
  ],
  "metadata": {
@@ -415,7 +537,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "roar",
    "language": "python",
    "name": "python3"
   },
@@ -429,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
