--- a/Part One/1-2-python-numeric-types.ipynb
+++ b/Part One/1-2-python-numeric-types.ipynb
@@ -42,12 +42,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-02-23T15:12:17.772127Z",
@@ -58,10 +69,18 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "Int = 10\n",
-    "\n",
     "i2 = int(False)  # type casting from boolean to int\n",
     "print(i2)\n",
     "\n",
@@ -69,12 +88,21 @@
     "\n",
     "result = Int + int\n",
     "\n",
-    "print(result)"
+    "print(result)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -87,7 +115,20 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "10\n",
+      "25\n",
+      "5.666666666666667\n",
+      "5\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "print(5-2)\n",
     "print(5*2)\n",
@@ -313,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-06-16T07:33:47.583356Z",
@@ -324,7 +365,22 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "-4\n",
+      "5\n",
+      "-4\n",
+      "4\n",
+      "-5\n",
+      "5\n",
+      "-4\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -384,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-07-24T21:28:01.119113Z",
@@ -395,7 +451,15 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct!\n"
+     ]
+    }
+   ],
    "source": [
     "# import two Python modules\n",
     "import math     # includes additional math functions\n",
@@ -477,41 +541,69 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "# Exercises"
+   "source": [
+    "# Exercises"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 1\n",
     "Discuss the difference between the results of two operations: 1. a = 10/5; 2. b = 10//5. Print out the boolean result that compares a == b."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10/5\n",
+    "b= 10//5\n",
+    "print(a==b)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 2\n",
     "Please write a code block to implement the following operation: Obtain an integer value from user input, then separate the input value as the sum of two parts. First part is the result by integer division // of five (5), the second part is the result by modulo % of five (5). For example, if the input integer is 17, the output should be a string: 17 = 3 * 5 + 2."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17  =  3 * 5 + 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputNum = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "quot = inputNum // 5\n",
+    "rem = inputNum % 5\n",
+    "print(inputNum, \" = \", quot, \"* 5 +\", rem)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 3\n",
     "The math constant PI is defined in Python in the math module as math.pi. Please write a code block. In the code, first import the math module, then calculate a circle's area with its radius equal to 2. Assign the result to a variable called area, and then print out its final value.\n",
@@ -520,64 +612,135 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of circle with radius 2 is 12.566370614359172\n",
+      "Radius of circle is 2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# exercise 3/4\n",
+    "import math\n",
+    "\n",
+    "area = math.pi * 2**2\n",
+    "print(\"Area of circle with radius 2 is\", area)\n",
+    "\n",
+    "area /= math.pi\n",
+    "rad = math.sqrt(area)\n",
+    "print(\"Radius of circle is\", rad)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 5\n",
     "Debug:"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'math' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[32m3\u001b[39m + \u001b[32m2\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmath\u001b[49m.sqrt(\u001b[32m9\u001b[39m))\n",
+      "\u001b[31mNameError\u001b[39m: name 'math' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "print (3 plus 2)\n",
-    "print (sqrt(9))"
+    "print(3 + 2)\n",
+    "print(math.sqrt(9))"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Challenges"
+   "metadata": {},
+   "source": [
+    "# Challenges"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Challenge 1\n",
     "Write a code block, in which the human user use function input() to input a number between 0 and 9, and then the computer use random.randint() function to also generate a number between 0 and 9. If the user's number is greater, print the string \"You Win\"; if the user's number is less, print \"You Lose\"; otherwise, print \"Draw\". Hint: Do not forget to type cast the user's input in str type to int type using the function int()."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You Win\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "ran = random.randint(0, 9)\n",
+    "if(num<ran):\n",
+    "    print(\"You Lose\")\n",
+    "elif(num>ran):\n",
+    "    print(\"You Win\")\n",
+    "else:\n",
+    "    print(\"You Tie\")"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Challenge 2\n",
     "Evaluate the code below, and then find a possible explanation why the return result is either True or False. Hint: this is not a \"bug\"."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "0.2 + 0.2 + 0.2 == 0.6"
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "0.6000000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0.2 + 0.2 + 0.2 == 0.6)\n",
+    "print(0.2 + 0.2 + 0.2)  \n",
+    "# This will return False due to floating point precision issues\n"
+   ]
   }
  ],
  "metadata": {
@@ -591,7 +754,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "roar",
    "language": "python",
    "name": "python3"
   },
@@ -605,7 +768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
