--- a/Part One/1-6-functions.ipynb
+++ b/Part One/1-6-functions.ipynb
@@ -367,122 +367,238 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "# Exercises"
+   "source": [
+    "# Exercises"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 1\n",
     "Please code a function *calculation(arg_1, arg_2)*, which takes in two arguments and calculate the multiplication result and float division result of them and then returns a list-type value of both results."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculation(a, b):\n",
+    "    return [a*b,a/b]"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 2\n",
     "Please code an *AND()* boolean function, which will take in two input boolean arguments, and output its logic *and* result. Please correctly include the function docstring and argument type checking to verify the input variables are boolean type."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def AND(a, b):\n",
+    "    \"\"\"\n",
+    "    Returns the logical AND of two boolean arguments.\n",
+    "\n",
+    "    Parameters:\n",
+    "        a (bool): First boolean argument.\n",
+    "        b (bool): Second boolean argument.\n",
+    "\n",
+    "    Returns:\n",
+    "        bool: True or False based on input\n",
+    "    \"\"\"\n",
+    "    if(type(a) == bool and type(b) == bool and a and b):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 3\n",
     "Please code a function called shorten_string(). The function takes in one string-type argument, and then will remove its first character and last character and return the result. If the input string is shorter than length-2, then the function shall return an empty string. If the input argument is not a string type, the function shall also return an empty string. Hint: Please remember to check the variable type of the input argument."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m     L.pop(-\u001b[32m1\u001b[39m)\n\u001b[32m      5\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33m'\u001b[39m.join(L)\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m short = \u001b[43mshorten_string\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mHello World!\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(short)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 2\u001b[39m, in \u001b[36mshorten_string\u001b[39m\u001b[34m(phrase)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mshorten_string\u001b[39m(phrase):\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     L = \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mphrase\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m     L.pop(\u001b[32m0\u001b[39m)\n\u001b[32m      4\u001b[39m     L.pop(-\u001b[32m1\u001b[39m)\n",
+      "\u001b[31mTypeError\u001b[39m: 'list' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "def shorten_string(phrase):\n",
+    "    L = list(phrase)\n",
+    "    L.pop(0)\n",
+    "    L.pop(-1)\n",
+    "    return ''.join(L)\n",
+    "\n",
+    "short = shorten_string(\"Hello World!\")\n",
+    "print(short)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 4\n",
     "In the lecture, an insert sort algorithm with default ascending order is discussed. Please modify the code that allows the function to sort a list in either ascending order or descending order, by setting a second argument *reverse* to be True or False."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 4, 3, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sort(list, reverse):\n",
+    "    if(reverse):\n",
+    "        list.sort()\n",
+    "        list.reverse()\n",
+    "        #return list\n",
+    "    else:\n",
+    "        list.sort()\n",
+    "        # return list\n",
+    "\n",
+    "list = [6, 2, 3, 4, 5]\n",
+    "sort(list, True)\n",
+    "print(list)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise 5\n",
     "Debug:"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
-   "execution_count": null,
    "source": [
-    "result_1 = int('2020 year')\n",
+    "result_1 = int('2020')\n",
     "\n",
     "int = 0\n",
+    "del(int)\n",
     "float = int(10.57)"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Challenges"
+   "metadata": {},
+   "source": [
+    "# Challenges"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Challenge 1\n",
     "Please code a timer function called tic_toc(). The first time calling the function, it will be set in the TIC state, calling time.time() to save the current system clock time; The second time calling the function, it will then be set in the TOC state, returning the time difference between the current system clock time and the previously saved system clock time. After the TOC state return, the function will be reset to wait for the next TIC state function call. Hint: The saved system clock time and the function's state whether it is in the first tic state or the second toc state can be defined as global variables."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0040030479431152\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "ticState = True\n",
+    "def tic_toc():\n",
+    "    global ticState\n",
+    "    if ticState:\n",
+    "        global tic\n",
+    "        global toc\n",
+    "        tic = time.time()\n",
+    "        ticState = False\n",
+    "    else:\n",
+    "        toc = time.time() - tic\n",
+    "        ticState = True\n",
+    "        return toc\n",
+    "\n",
+    "tic_toc()  # Start timing\n",
+    "time.sleep(2)  # Simulate some processing time\n",
+    "print(tic_toc())  # End timing and print elapsed time"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Challenge 2\n",
     "Please code a circular_shift() function, which takes in two arguments: a string called *input_string* and an integer called *direction*. When *direction = -1*, the function will return a string that circularly shifts *input_string* elements to the left by one position. When *direction = 1*, the function will return a string that circularly shifts *input_string* elements to the right by one position. Hint: In here, circular shift means whenever an element is shifted outside the range of the existing string, it will be added back to the string from the opposite side such that the total length and all elements remain the same after circular shift."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "234567891\n",
+      "912345678\n"
+     ]
+    }
+   ],
+   "source": [
+    "def circular_shift(input_string, direction):\n",
+    "    left = input_string[1:]\n",
+    "    right = input_string[0:-1]\n",
+    "    if direction == -1:\n",
+    "        return left + input_string[0]\n",
+    "    elif direction == 1:\n",
+    "        return input_string[-1] + right\n",
+    "    else:\n",
+    "        return input_string\n",
+    "    \n",
+    "input_string = \"123456789\"\n",
+    "print(circular_shift(input_string, -1)) \n",
+    "print(circular_shift(input_string, 1))  "
+   ]
   }
  ],
  "metadata": {
@@ -496,7 +612,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "roar",
    "language": "python",
    "name": "python3"
   },
@@ -510,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
