--- a/Part One/1-11-binary-representation.ipynb
+++ b/Part One/1-11-binary-representation.ipynb
@@ -529,7 +529,7 @@
      "evalue": "bytes can only contain ASCII literal characters. (<ipython-input-10-cc42250ae39b>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;36m  File \u001B[0;32m\"<ipython-input-10-cc42250ae39b>\"\u001B[0;36m, line \u001B[0;32m1\u001B[0m\n\u001B[0;31m    s4 = b\"二0二0\"\u001B[0m\n\u001B[0m        ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m bytes can only contain ASCII literal characters.\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-cc42250ae39b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    s4 = b\"二0二0\"\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m bytes can only contain ASCII literal characters.\n"
      ]
     }
    ],
@@ -673,11 +673,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Byte count:  80\n"
+     ]
+    }
+   ],
    "source": [
-    "s = \"😊\"  # Smiling face with smiling eyes emoji"
+    "import sys\n",
+    "s = \"😊\"  # Smiling face with smiling eyes emoji\n",
+    "print('Byte count: ', sys.getsizeof(s))"
    ]
   },
   {
@@ -690,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-03-15T08:57:50.745974Z",
@@ -707,6 +717,10 @@
      "output_type": "stream",
      "text": [
       "True\n",
+      "二0\n",
+      "b'\\xe4\\xba\\x8c0'\n",
+      "2909578654995537706\n",
+      "-3878373031799129917\n",
       "False\n"
      ]
     }
@@ -717,7 +731,11 @@
     "\n",
     "s2 = \"二0\"\n",
     "b2 = s2.encode('utf-8')\n",
-    "print(s2.__hash__()==b2.__hash__())"
+    "print(s2)\n",
+    "print(b2)\n",
+    "print(s2.__hash__())\n",
+    "print(b2.__hash__())\n",
+    "print(s2.__hash__()==b2.__hash__()) "
    ]
   },
   {
@@ -730,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-03-15T09:10:51.999623Z",
@@ -743,20 +761,16 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "a bytes-like object is required, not 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-14-4f511c4a7e56>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0ms\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;34m\"test string\"\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mencode\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'utf-8'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 2\u001B[0;31m \u001B[0ma\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mb\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0ms\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0msplit\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m' '\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      3\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0ma\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mb\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mTypeError\u001B[0m: a bytes-like object is required, not 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'test' b'string'\n"
      ]
     }
    ],
    "source": [
     "s = \"test string\".encode('utf-8')\n",
-    "a, b = s.split(' ')\n",
+    "a, b = s.split()\n",
     "\n",
     "print(a, b)"
    ]
@@ -764,11 +778,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "# Challenges"
+   "source": [
+    "# Challenges"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Challenge 1\n",
     "In Python, there is a dynamically linked list type called *deque* from the module name *collections*. A deque type variable can pop its elements from the right using *.pop()* method, and from the left using *.popleft()* method.\n",
@@ -777,11 +793,11 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": ""
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -795,7 +811,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "roar",
    "language": "python",
    "name": "python3"
   },
@@ -809,7 +825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
